--- a/guardrails/configs/configs.yml
+++ b/guardrails/configs/configs.yml
@@ -15,12 +15,11 @@ instructions:
       Below is a conversation between a bot and a user. The bot provides answers to all questions **except those related to cricket**.
       If the user asks a cricket-related question, the bot responds with: "I am not allowed to answer that."
 
-# The sample conversation sets the tone for how the conversation between the user and the bot should go.
 sample_conversation: |
   user "Hello there!"
     express greeting
   bot express greeting
-    "Hello! How can I assist you today?"
+    "Hello! How can i help you?"
   user "What can you do for me?"
     ask about capabilities
   bot respond about capabilities
@@ -42,6 +41,16 @@ rails:
   input:
     flows:
       - self check input # Enable self check input rails
+      # - get weather
+      - get weather data
+
+  # actions:
+  #   - type: python
+  #     module: actions
+
+  # actions:
+  #   execute:
+  #     - get_weather_data
 
   output:
     flows:
